# accessibleoffice

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: desktop-release.yml
desktop/: BUILD.md  index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  index.css
desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/resources/: .gitignore  README.md
desktop/src-tauri/src/: lib.rs
docs/: accessibility-pipeline-review-2026-06-05.md  bioadhesion-eval-2026-06-09.md  manifest-schema.md  officecli-cookbook.md  rule-catalog.md
docs/superpowers/plans/: 2026-06-09-multi-backend-adapters.md
scripts/: live_smoke.py  prepare-resources.sh
src/a11yfix/: __init__.py  _io.py  batch.py  cli.py  cli_rollup.py  cli_status.py  cost_meter.py  manifest.py  resume.py  stage4.py  stage4_codex.py
src/a11yfix/ai/: __init__.py  adapter.py  agent_cli.py  agent_sdk_adapter.py  claude_adapter.py  codex_adapter.py  confidence.py  direct_llm_adapter.py  errors.py  opencode_adapter.py  pi_adapter.py  prompts.py  registry.py
src/a11yfix/fixers/: __init__.py  deterministic.py  single_shot.py
src/a11yfix/ooxml/: __init__.py  docx_paths.py  docx_reader.py  image_extract.py  namespaces.py  officecli.py  pptx_paths.py  pptx_reader.py  theme_colors.py  toggles.py
src/a11yfix/reporting/: __init__.py  json_writer.py  terminal.py
src/a11yfix/rules/: __init__.py  alt_text.py  base.py  captions_media.py  color_contrast.py  decorative_flag.py  document_language.py  document_title.py  drm_irm.py  floating_objects.py  heading_structure.py  link_text.py  list_semantics.py  merged_cells.py  nontext_contrast.py  reading_order.py  slide_title.py  table_headers.py
tests/: conftest.py
tests/integration/: test_officecli_deterministic_ops.py  test_pipeline_report_only.py
tests/unit/: conftest.py  test_adapter_errors.py  test_adapter_usage.py  test_agent_cli.py  test_agent_sdk_adapter.py  test_alt_text.py  test_alt_text_quality.py  test_batch_partial_status.py  test_cli_backend_selection.py  test_codex_adapter.py  test_color_contrast.py  test_detection_regressions.py  test_direct_llm_adapter.py  test_document_title.py  test_docx_rules.py  test_fixers_partial_results.py  test_image_sniffing.py  test_link_text.py  test_manifest.py  test_officecli.py  test_opencode_adapter.py  test_pi_adapter.py  test_registry.py  test_slide_title.py  test_stage4_codex.py  test_stage4_fallback.py  test_stage4_launchers.py  test_table_headers.py  test_terminal_report.py  test_theme_colors.py  test_usage_recording.py
